List all vets on Vet Index Page. Closes #23

--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,6 +5,7 @@
     <title>List of Owners</title>
 </head>
 <body>
+<!--comment hint for IntelliJ so its intelli-sense connects owner variable to the Owner type-->
 <!--/*@thymesVar id="owner" type=sfg.petclinicsfgedition.model.Owner*/-->
 <h1 th:text="'List of Owners'">List of Owners...</h1>
 
