--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -5,6 +5,25 @@
     <title>List of Vets</title>
 </head>
 <body>
-    <h1 th:text="'List of Vets'">List of Vets...</h1>
+<!--comment hint for IntelliJ so its intelli-sense connects vet variable to the Vet type-->
+<!--/*@thymesVar id="vet" type=sfg.petclinicsfgedition.model.Vet*/-->
+<h1 th:text="'List of Vets'">List of Vets...</h1>
+
+<table>
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="vet : ${vets}">
+        <td th:text="${vet.id}">1</td>
+        <td th:text="${vet.firstName}">Jeremy</td>
+        <td th:text="${vet.lastName}">Jackson</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
