--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!--Lifted over from SPC-->
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'home')}">
 <head>
     <meta charset="UTF-8">
     <title>Pet Clinic Index</title>
@@ -7,6 +8,12 @@
 <body>
     <!--adding this as a placeholder so that IntelliJ doesn't delete the namespace above "cause no tags are used
     also, framing index page in single quotes as well to avoid it getting parsed as an expression--"-->
-    <h1 th:text="'Index Page'">Index Page</h1>
+    <h2 th:text="#{welcome}">Welcome</h2>
+
+    <div class="row">
+        <div class="col-md-12">
+            <img class="img-responsive" src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
+        </div>
+    </div>
 </body>
 </html>
